added text fonts to the project

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
+
 body {
   padding: 0;
   margin: 0;
+  font-family: "Black Ops One", sans-serif;
+}
+
+/* Apply the font to a specific element */
+h1 {
+  font-family: "Black Ops One", sans-serif;
 }
