--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,11 @@ body {
   text-align: center;
   align-items: center;
 }
+
+.header .header-Wrap .again-And-Text-Wrap {
+  display: flex;
+  height: 40%;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
