--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,8 @@ body {
 .header .header-Wrap .again-And-Text-Wrap {
   display: flex;
   height: 10%;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
 }
