--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 body {
   padding: 0;
   margin: 0;
+  background-color: rgb(39, 39, 39);
   font-family: "Black Ops One", sans-serif;
 }
 
@@ -37,6 +38,11 @@ body {
   align-items: center;
   display: flex;
   justify-content: center;
+}
+.header .header-Wrap .again-And-Text-Wrap .again-Btn {
+  padding: 10px 40px;
+  color: rgb(39, 39, 39);
+  background-color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
