--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
+
 body {
   padding: 0;
   margin: 0;
@@ -14,6 +15,7 @@ body {
   height: 100vh;
   justify-content: space-evenly;
 }
+
 .header .header-Wrap {
   width: 90%;
   height: 90%;
@@ -22,6 +24,7 @@ body {
   text-align: center;
   align-items: center;
 }
+
 .header .header-Wrap .again-And-Text-Wrap {
   display: flex;
   height: 10%;
@@ -30,6 +33,7 @@ body {
   align-items: center;
   width: 100%;
 }
+
 .header .header-Wrap .again-And-Text-Wrap .again-Left-Wrap,
 .header .header-Wrap .again-And-Text-Wrap .again-Right-Wrap {
   width: 50%;
@@ -39,10 +43,11 @@ body {
   display: flex;
   justify-content: center;
 }
+
 .header .header-Wrap .again-And-Text-Wrap .again-Btn {
   padding: 10px 40px;
-  color: rgb(39, 39, 39);
-  background-color: white;
+  background-color: rgb(255, 254, 254);
+  color: rgb(99, 91, 91);
+  font-family: "Black Ops One", sans-serif;
+  font-size: 20px;
 }
-
-/*# sourceMappingURL=style.css.map */
