--- a/src/style.scss
+++ b/src/style.scss
@@ -2,10 +2,13 @@
 
 $fontOne: "Black Ops One", sans-serif;
 
+$colorBackGroundOne: rgb(39, 39, 39);
+$colorBackGroundTwo: rgb(99, 91, 91);
+
 body {
   padding: 0;
   margin: 0;
-  background-color: rgb(39, 39, 39);
+  background-color: $colorBackGroundOne;
   font-family: "Black Ops One", sans-serif;
 }
 
@@ -45,8 +48,10 @@ body {
 
       .again-Btn {
         padding: 10px 40px;
-        color: rgb(39, 39, 39);
-        background-color: white;
+        background-color: rgb(255, 254, 254);
+        color: $colorBackGroundTwo;
+        font-family: $fontOne;
+        font-size: 20px;
       }
     }
   }
