--- a/src/style.css
+++ b/src/style.css
@@ -50,4 +50,14 @@ body {
   color: rgb(99, 91, 91);
   font-family: "Black Ops One", sans-serif;
   font-size: 20px;
+  transition: all 50ms ease-in-out;
+  border: solid white 2px;
+  cursor: pointer;
+}
+
+.header .header-Wrap .again-And-Text-Wrap .again-Btn:hover {
+  transform: scale(1.1);
+  background-color: rgb(39, 39, 39);
+  color: white;
+  border: solid white 2px;
 }
