--- a/src/style.scss
+++ b/src/style.scss
@@ -62,6 +62,10 @@ body {
           color: white;
           border: solid white 2px;
         }
+
+        &:active {
+          transform: scale(0.9);
+        }
       }
     }
   }
