--- a/src/style.scss
+++ b/src/style.scss
@@ -67,6 +67,13 @@ body {
           transform: scale(0.9);
         }
       }
+
+      .again-Right-Text {
+        font-size: 1.5rem;
+        color: white;
+        display: flex;
+        gap: 5px;
+      }
     }
   }
 }
