--- a/src/style.scss
+++ b/src/style.scss
@@ -78,5 +78,15 @@ body {
         padding: 10px;
       }
     }
+
+    .Title-Wrap {
+      height: 20%;
+      width: 100%;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
