--- a/src/style.scss
+++ b/src/style.scss
@@ -81,12 +81,20 @@ body {
 
     .Title-Wrap {
       height: 20%;
-      width: 100%;
+      width: 30%;
       text-align: center;
       align-items: center;
       justify-content: center;
       display: flex;
       flex-direction: column;
+      background-color: white;
+      color: $colorBackGroundTwo;
+      border-radius: 2px;
+
+      .Title-Text {
+        font-family: $fontOne;
+        font-size: 3rem;
+      }
     }
   }
 }
