--- a/src/style.scss
+++ b/src/style.scss
@@ -80,7 +80,7 @@ body {
     }
 
     .Title-Wrap {
-      height: 20%;
+      height: 10%;
       width: 30%;
       text-align: center;
       align-items: center;
@@ -95,6 +95,17 @@ body {
         font-family: $fontOne;
         font-size: 3rem;
       }
+    }
+
+    .decoration-Wrap {
+      height: 30%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      position: relative;
     }
   }
 }
