added styling to decoration-Box

--- a/src/style.css
+++ b/src/style.css
@@ -104,3 +104,20 @@ body {
   justify-content: center;
   position: relative;
 }
+
+.header .header-Wrap .decoration-Wrap .decoration-Box {
+  position: absolute;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  top: 50%;
+  background-color: aliceblue;
+  color: rgb(99, 91, 91);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
