--- a/src/style.scss
+++ b/src/style.scss
@@ -106,6 +106,23 @@ body {
       align-items: center;
       justify-content: center;
       position: relative;
+
+      .decoration-Box {
+        position: absolute;
+        height: 200px;
+        width: 200px;
+        border-radius: 50%;
+        top: 50%;
+        background-color: aliceblue;
+        color: $colorBackGroundTwo;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-self: center;
+        justify-content: center;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 }
