--- a/src/style.css
+++ b/src/style.css
@@ -120,4 +120,17 @@ body {
   justify-content: center;
   left: 50%;
   transform: translate(-50%, -50%);
+  overflow: hidden;
+  z-index: 5;
+}
+
+.header .header-Wrap .decoration-Wrap .decoration-Line {
+  width: 100%;
+  height: 15px;
+  background-color: aliceblue;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border-radius: 15px;
+  border: solid rgb(99, 91, 91) 3px;
 }
