--- a/src/style.scss
+++ b/src/style.scss
@@ -122,6 +122,19 @@ body {
         justify-content: center;
         left: 50%;
         transform: translate(-50%, -50%);
+        overflow: hidden;
+        z-index: 5;
+      }
+
+      .decoration-Line {
+        width: 100%;
+        height: 15px;
+        background-color: aliceblue;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        border-radius: 15px;
+        border: solid $colorBackGroundTwo 3px;
       }
     }
   }
