--- a/src/style.scss
+++ b/src/style.scss
@@ -111,7 +111,6 @@ body {
         position: absolute;
         height: 200px;
         width: 200px;
-        border-radius: 50%;
         top: 50%;
         background-color: aliceblue;
         color: $colorBackGroundTwo;
@@ -123,6 +122,7 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         overflow: hidden;
+        border: solid $colorBackGroundTwo 3px;
         z-index: 5;
       }
 
@@ -131,7 +131,7 @@ body {
         height: 15px;
         background-color: aliceblue;
         position: absolute;
-        top: 50%;
+        top: 46%;
         left: 0;
         border-radius: 15px;
         border: solid $colorBackGroundTwo 3px;
