added new input-Btn-Wrap div + added styling

--- a/src/style.css
+++ b/src/style.css
@@ -143,3 +143,13 @@ body {
   text-align: center;
   align-items: center;
 }
+
+.header .header-Wrap .score-Input-Wrap .input-Wrap {
+  width: 50%;
+  height: 100%;
+  text-align: end;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+}
