--- a/src/style.css
+++ b/src/style.css
@@ -147,9 +147,19 @@ body {
 .header .header-Wrap .score-Input-Wrap .input-Wrap {
   width: 50%;
   height: 100%;
-  text-align: end;
   display: flex;
   flex-direction: column;
-  align-items: end;
   justify-content: center;
+  align-items: end;
+  text-align: end;
+}
+
+.header .header-Wrap .score-Input-Wrap .input-Wrap .input-Btn-Wrap {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
 }
