--- a/src/style.scss
+++ b/src/style.scss
@@ -149,11 +149,21 @@ body {
       .input-Wrap {
         width: 50%;
         height: 100%;
-        text-align: end;
         display: flex;
         flex-direction: column;
-        align-items: end;
         justify-content: center;
+        align-items: end;
+        text-align: end;
+
+        .input-Btn-Wrap {
+          display: flex;
+          text-align: center;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          width: 50%;
+          height: 100%;
+        }
       }
     }
   }
