--- a/src/style.scss
+++ b/src/style.scss
@@ -165,7 +165,7 @@ body {
           height: 100%;
           gap: 30px;
 
-          .text-Input {
+          .number-Input {
             width: 200px;
             height: 100px;
             background-color: transparent;
