--- a/src/style.css
+++ b/src/style.css
@@ -179,3 +179,17 @@ body {
   flex-direction: column;
   font-size: 5rem;
 }
+
+.header .header-Wrap .score-Input-Wrap .input-Wrap .input-Btn-Wrap .check-Btn {
+  width: 200px;
+  height: 100px;
+  background-color: transparent;
+  color: white;
+  border: solid white 5px;
+  font-family: "Black Ops One", sans-serif;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+}
