--- a/src/style.css
+++ b/src/style.css
@@ -192,10 +192,15 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 2.5rem;
+  transition: all 50ms ease-in-out;
+  cursor: pointer;
 }
 
 .header .header-Wrap .score-Input-Wrap .input-Wrap .input-Btn-Wrap .check-Btn:hover {
   transform: scale(1.1);
+  background-color: white;
+  border: solid rgb(99, 91, 91) 5px;
+  color: rgb(99, 91, 91);
 }
 
 .header .header-Wrap .score-Input-Wrap .input-Wrap .input-Btn-Wrap .check-Btn:active {
