--- a/src/style.scss
+++ b/src/style.scss
@@ -208,6 +208,16 @@ body {
           }
         }
       }
+
+      .score-Wrap {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        text-align: start;
+      }
     }
   }
 }
