--- a/src/style.scss
+++ b/src/style.scss
@@ -217,6 +217,17 @@ body {
         justify-content: center;
         align-items: start;
         text-align: start;
+
+        .score-Wrap-Wrapper {
+          width: 50%;
+          height: 100%;
+          display: flex;
+          text-align: center;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          gap: 30px;
+        }
       }
     }
   }
