--- a/src/style.scss
+++ b/src/style.scss
@@ -217,6 +217,10 @@ body {
         justify-content: center;
         align-items: start;
         text-align: start;
+        border: solid white 10px;
+        border-right: none;
+        border-top: none;
+        border-bottom: none;
 
         .score-Wrap-Wrapper {
           width: 50%;
