--- a/src/style.css
+++ b/src/style.css
@@ -124,6 +124,10 @@ body {
   z-index: 5;
 }
 
+.header .header-Wrap .decoration-Wrap .decoration-Box .decoration-Text {
+  font-size: 8rem;
+}
+
 .header .header-Wrap .decoration-Wrap .decoration-Line {
   width: 100%;
   height: 15px;
