added responsvness size 768px to the project

--- a/src/style.css
+++ b/src/style.css
@@ -278,3 +278,76 @@ body {
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .header .header-Wrap .again-And-Text-Wrap .again-Btn {
+    padding: 10px 40px;
+    font-size: 15px;
+  }
+
+  .header .header-Wrap .again-And-Text-Wrap .again-Right-Text {
+    padding: 0;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 50px;
+    font-size: 0.8rem;
+  }
+
+  .header .header-Wrap .Title-Wrap .Title-Text {
+    font-size: 1.3rem;
+  }
+
+  .header .header-Wrap .decoration-Wrap .decoration-Box {
+    height: 100px;
+    width: 100px;
+    border: none;
+  }
+
+  .header .header-Wrap .decoration-Wrap .decoration-Box .decoration-Text {
+    font-size: 4rem;
+  }
+
+  .header .header-Wrap .decoration-Wrap .decoration-Line {
+    width: 100%;
+    height: 3px;
+    top: 50%;
+    left: 0;
+    border: none;
+  }
+
+  .header .header-Wrap .score-Input-Wrap .input-Wrap .input-Btn-Wrap .number-Input {
+    font-size: 2rem;
+    width: 75%;
+  }
+
+  .header .header-Wrap .score-Input-Wrap .input-Wrap .input-Btn-Wrap .check-Btn {
+    font-size: 1.2rem;
+    width: 75%;
+  }
+
+  .header .header-Wrap .score-Input-Wrap .score-Wrap {
+    border: solid white 5px;
+    border-right: none;
+    border-top: none;
+    border-bottom: none;
+  }
+
+  .header .header-Wrap .score-Input-Wrap .score-Wrap .score-Wrap-Wrapper {
+    gap: 15px;
+  }
+
+  .header .header-Wrap .score-Input-Wrap .score-Wrap .score-Wrap-Wrapper .title-Text-Score-Wrap .score-1-Text {
+    font-size: 1.2rem;
+  }
+
+  .header .header-Wrap .score-Input-Wrap .score-Wrap .Score-Number-Wrap .main-Score {
+    font-size: 1.2rem;
+  }
+
+  .header .header-Wrap .score-Input-Wrap .score-Wrap .Score-Number-Wrap .high-Score {
+    font-size: 1.2rem;
+  }
+}
